err/pygmie.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Pygmie-1.4.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/psycopg2'...
Listing './lib/python3.5/site-packages/psycopg2/.libs'...
Listing './lib/python3.5/site-packages/psycopg2/tests'...
Listing './lib/python3.5/site-packages/psycopg2-2.7.3.2.dist-info'...
Listing './lib/python3.5/site-packages/pygmie'...
Listing './lib/python3.5/site-packages/pygmie/static'...
Listing './lib/python3.5/site-packages/pygmie/static/ace'...
Listing './lib/python3.5/site-packages/pygmie/static/bootstrap'...
Listing './lib/python3.5/site-packages/pygmie/static/bootstrap/css'...
Listing './lib/python3.5/site-packages/pygmie/static/bootstrap/img'...
Listing './lib/python3.5/site-packages/pygmie/static/bootstrap/js'...
Listing './lib/python3.5/site-packages/pygmie/static/jquery'...
Listing './lib/python3.5/site-packages/pygmie/static/jqueryui'...
Listing './lib/python3.5/site-packages/pygmie/static/jqueryui/css'...
Listing './lib/python3.5/site-packages/pygmie/static/jqueryui/css/ui-lightness'...
Listing './lib/python3.5/site-packages/pygmie/static/jqueryui/css/ui-lightness/images'...
Listing './lib/python3.5/site-packages/pygmie/static/jqueryui/development-bundle'...
Listing './lib/python3.5/site-packages/pygmie/static/jqueryui/development-bundle/demos'...
Listing './lib/python3.5/site-packages/pygmie/static/jqueryui/development-bundle/demos/images'...
Listing './lib/python3.5/site-packages/pygmie/static/jqueryui/development-bundle/demos/position'...
Listing './lib/python3.5/site-packages/pygmie/static/jqueryui/development-bundle/demos/position/images'...
Listing './lib/python3.5/site-packages/pygmie/static/jqueryui/development-bundle/demos/resizable'...
Listing './lib/python3.5/site-packages/pygmie/static/jqueryui/development-bundle/demos/widget'...
Listing './lib/python3.5/site-packages/pygmie/static/jqueryui/development-bundle/docs'...
Listing './lib/python3.5/site-packages/pygmie/static/jqueryui/development-bundle/external'...
Listing './lib/python3.5/site-packages/pygmie/static/jqueryui/development-bundle/themes'...
Listing './lib/python3.5/site-packages/pygmie/static/jqueryui/development-bundle/themes/base'...
Listing './lib/python3.5/site-packages/pygmie/static/jqueryui/development-bundle/themes/base/images'...
Listing './lib/python3.5/site-packages/pygmie/static/jqueryui/development-bundle/themes/base/minified'...
Listing './lib/python3.5/site-packages/pygmie/static/jqueryui/development-bundle/themes/ui-lightness'...
Listing './lib/python3.5/site-packages/pygmie/static/jqueryui/development-bundle/themes/ui-lightness/images'...
Listing './lib/python3.5/site-packages/pygmie/static/jqueryui/development-bundle/themes/ui-lightness/minified'...
Listing './lib/python3.5/site-packages/pygmie/static/jqueryui/development-bundle/ui'...
Listing './lib/python3.5/site-packages/pygmie/static/jqueryui/development-bundle/ui/minified'...
Listing './lib/python3.5/site-packages/pygmie/static/jqueryui/js'...
Listing './lib/python3.5/site-packages/pygmie/static/jstorage'...
Listing './lib/python3.5/site-packages/pygmie/static/misc'...
Listing './lib/python3.5/site-packages/pygmie/static/misc/images'...
Listing './lib/python3.5/site-packages/pygmie/static/treeview'...
Listing './lib/python3.5/site-packages/pygmie/templates'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sqlparse'...
Listing './lib/python3.5/site-packages/sqlparse/engine'...
Listing './lib/python3.5/site-packages/sqlparse/filters'...
Listing './lib/python3.5/site-packages/sqlparse-0.2.4.dist-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
